projects/certificate-mgmt-using-cert-manager/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-with-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
   - secretName: example-com-tls
     hosts:
      - example.com
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
